[gd_scene load_steps=7 format=3 uid="uid://c7v7he4owrfxw"]

[ext_resource type="Texture2D" uid="uid://cxe8c64elabdj" path="res://Art/Background_1.png" id="1_iynit"]
[ext_resource type="Script" uid="uid://7htff63qs04c" path="res://Scripts/Credits.gd" id="2_iynit"]
[ext_resource type="Texture2D" uid="uid://chcol6cojommj" path="res://Art/Panels/220x250Panel.png" id="3_lpub1"]
[ext_resource type="FontFile" uid="uid://82qj0rpumxrm" path="res://Art/04B_08__.TTF" id="4_640q4"]
[ext_resource type="AudioStream" uid="uid://b5ms4uf6womaq" path="res://SFX/OST/Mesmerizer.mp3" id="5_5qoai"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_df05h"]
texture = ExtResource("3_lpub1")

[node name="MainMenu" type="Node2D"]

[node name="HomeScreenGradient" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("1_iynit")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_iynit")

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Player1" type="Panel" parent="Control/CanvasLayer"]
offset_right = 220.0
offset_bottom = 250.0
theme_override_styles/panel = SubResource("StyleBoxTexture_df05h")

[node name="Player1ScoreLabel" type="Label" parent="Control/CanvasLayer/Player1"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 212.0
offset_bottom = 247.0
theme_override_fonts/font = ExtResource("4_640q4")
theme_override_font_sizes/font_size = 12
text = "Designers:
bbconst
camphetamine
bland_cosmic
empex
hohei
ursa1261
massthebass
"

[node name="Player2" type="Panel" parent="Control/CanvasLayer"]
offset_left = 420.0
offset_right = 640.0
offset_bottom = 250.0
theme_override_styles/panel = SubResource("StyleBoxTexture_df05h")

[node name="Player2ScoreLabel" type="Label" parent="Control/CanvasLayer/Player2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 246.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_640q4")
theme_override_font_sizes/font_size = 12
text = "music:
shrimp quartet - justan oval
monitoring - deco27
Mesmerizer - 32ki
m@gicalCure! Love Shot!
- sawtowne"
autowrap_mode = 3

[node name="StartButton" type="Button" parent="Control/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -311.0
offset_top = 141.0
offset_right = -187.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_640q4")
text = "Return"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5qoai")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="Control/CanvasLayer/StartButton" to="Control" method="_on_start_button_pressed"]
